--- a/portfolio.html
+++ b/portfolio.html
@@ -5,15 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/modern-normalize@1.1.0/modern-normalize.min.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
-     <link rel="stylesheet" href="./css/styles.css"
+   
 </head>
 <body class="body">
-   <header class="header">
-        <nav class="nav">
+   <header >
+        <nav < div class="container" class="nav">
             <a href="" class="nav-logo"> <span class=nav-logo-begin>Web</span> <span class=nav-logo-end>Studio</span></a>
         
             <ul class="nav-list"> 
@@ -21,13 +17,14 @@
                     <li><a class="nav-list-link current" href=""> Портфолио </a></li>
                     <li><a class="nav-list-link" href="">Контакты</a></li>
 
-            </ul>
+            </ul></div>
         </nav>
 
         <ul class="contacts">
             <li><a class="contacts-mail" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
             <li><a class="contacts-phone" href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
+       
     </header>
         <main>
             <h1 hidden>Наши проекты</h1>
