--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <a href="" class="nav-logo"> <span class=nav-logo-begin>Web</span> <span class=nav-logo-end>Studio</span></a>
 
                 <ul class="nav-list">
-                    <li><a href=""class="nav-list-link current">Студия</a></li>
+                    <li class="item"><a href=""class="nav-list-link current">Студия</a></li>
                     <li><a class="nav-list-link" href="./portfolio.html">Портфолио</a></li>
                     <li><a class="nav-list-link" href="">Контакты</a></li>
 
