--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 
                 <ul class="nav-list">
                     <li class="item"><a href=""class="nav-list-link current">Студия</a></li>
-                    <li><a class="nav-list-link" href="./portfolio.html">Портфолио</a></li>
-                    <li><a class="nav-list-link" href="">Контакты</a></li>
+                    <li class="item"><a class="nav-list-link" href="./portfolio.html">Портфолио</a></li>
+                    <li class="item"><a class="nav-list-link" href="">Контакты</a></li>
 
                 </ul>
             </nav>
