--- a/portfolio.html
+++ b/portfolio.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/modern-normalize@1.1.0/modern-normalize.min.css">
     <link rel="stylesheet" href="./css/styles.css"</head>
-    
+
 <body class="body">
    <header >
         <div class="container main">
@@ -18,8 +18,8 @@
                 <a href="" class="nav-logo"> <span class=nav-logo-begin>Web</span> <span class=nav-logo-end>Studio</span></a>
 
                 <ul class="nav-list">
-                    <li class="item"><a href=""class="nav-list-link current">Студия</a></li>
-                    <li class="item"><a class="nav-list-link" href="./portfolio.html">Портфолио</a></li>
+                    <li class="item"><a href="./index.html"class="nav-list-link">Студия</a></li>
+                    <li class="item"><a class="nav-list-link current" href="./portfolio.html">Портфолио</a></li>
                     <li class="item"><a class="nav-list-link" href="">Контакты</a></li>
 
                 </ul>
