--- a/portfolio.html
+++ b/portfolio.html
@@ -46,49 +46,51 @@
             </div>
             
 <!-- projects -->
-            <ul>
-                <li>
+            <div class="container pictures"><ul class="list-pictures">
+                <li class="item-picture">
                     <img src="./Images/img1.jpg" alt="Окно браузера" width="370">
                     <h2 class="project-name">Технокряк</h2>
                     <p class="project-type">Веб-сайт</p>
                 </li>
-                <li>
+                <li class="item-picture">
                     <img src="./Images/img2.jpg" alt="Постер" width="370">
                     <h2 class="project-name">Постер New Orlean vs Golden Star</h2>
                     <p class="project-type">Дизайн</p>
                 </li>
-                <li>
+                <li class="item-picture">
                     <img src="./Images/img3.jpg" alt="Лого ресторана" width="370">
                     <h2 class="project-name">Ресторан Seafood</h2>
                     <p class="project-type">Приложение</p>
                 </li>
-                <li><img src="./Images/img4.jpg" alt="Наушники" width="370">
+                <li class="item-picture"><img src="./Images/img4.jpg" alt="Наушники" width="370">
                     <h2 class="project-name">Проект Prime</h2>
                     <p class="project-type">Маркетинг</p>
                 </li>
-                <li>
+                <li class="item-picture">
                     <img src="./Images/img5.jpg" alt="Коробки" width="370">
                     <h2 class="project-name">Проект Boxes</h2>
                     <p class="project-type">Приложение</p>
                 </li>
-                <li>
+                <li class="item-picture">
                     <img src="./Images/img6.jpg" alt="Монитор" width="370">
                     <h2 class="project-name">Inspiration has no Borders</h2>
                     <p class="project-type">Веб-сайт</p>
                 </li>
-                <li><img src="./Images/img7.jpg" alt="Журнал" width="370">
+                <li class="item-picture"><img src="./Images/img7.jpg" alt="Журнал" width="370">
                     <h2 class="project-name">Издание Limited Edition</h2>
                     <p class="project-type">Дизайн</p>
                 </li>
-                <li><img src="./Images/img8.jpg" alt="Ярлык" width="370">
+                <li class="item-picture"><img src="./Images/img8.jpg" alt="Ярлык" width="370">
                     <h2 class="project-name">Проект LAB</h2>
                     <p class="project-type">Маркетинг</p>
                 </li>
-                <li><img src="./Images/img9.jpg" alt="Ноутбук" width="370">
+                <li class="item-picture"><img src="./Images/img9.jpg" alt="Ноутбук" width="370">
                     <h2 class="project-name">Growing Business</h2>
                     <p class="project-type">Приложение</p>
                 </li>
             </ul>
+        </div>
+            
 
         </main>
         <footer class="footer">
