--- a/portfolio.html
+++ b/portfolio.html
@@ -35,7 +35,7 @@
     </header>
         <main>
             <div class="container"><h1 hidden>Наши проекты</h1>
-                <ul class="container projects">
+                <ul class="projects">
                     <li class="project-item"><button class= "project-button" type="button">Все</button>
                     </li>
 
