--- a/index.html
+++ b/index.html
@@ -87,30 +87,31 @@
         </section>
         <!-- Секция Наша команда -->
         <section class="section-team">
-            <h2 class="section-title">Наша команда</h2>
-            <ul>
-                <li>
-                    <img src="./Images/photo1.jpg" alt="Игорь Демьяненко" width="270">
-                    <h3 class="name">Игорь Демьяненко</h3>
-                    <p class="job">Product Designer</p>
-                </li>
-                <li>
-                    <img src="./Images/photo2.jpg" alt="Ольга Репина" width="270">
-                    <h3 class="name">Ольга Репина</h3>
-                    <p class="job">Frontend Developer</p>
-                </li>
-                <li>
-                    <img src="./Images/photo3.jpg" alt="Николай Тарасов" width="270">
-                    <h3 class="name">Николай Тарасов</h3>
-                    <p class="job">Marketing</p>
-                </li>
-                <li>
-                    <img src="./Images/photo4.jpg" alt="Михаил Ермаков" width="270">
-                    <h3 class="name">Михаил Ермаков</h3>
-                    <p class="job">UI Designer</p>
-                </li>
-
-            </ul>
+            <div class="container"><h2 class="section-title">Наша команда</h2>
+                <ul class="team">
+                    <li>
+                        <img src="./Images/photo1.jpg" alt="Игорь Демьяненко" width="270">
+                        <h3 class="name">Игорь Демьяненко</h3>
+                        <p class="job">Product Designer</p>
+                    </li>
+                    <li>
+                        <img src="./Images/photo2.jpg" alt="Ольга Репина" width="270">
+                        <h3 class="name">Ольга Репина</h3>
+                        <p class="job">Frontend Developer</p>
+                    </li>
+                    <li>
+                        <img src="./Images/photo3.jpg" alt="Николай Тарасов" width="270">
+                        <h3 class="name">Николай Тарасов</h3>
+                        <p class="job">Marketing</p>
+                    </li>
+                    <li>
+                        <img src="./Images/photo4.jpg" alt="Михаил Ермаков" width="270">
+                        <h3 class="name">Михаил Ермаков</h3>
+                        <p class="job">UI Designer</p>
+                    </li>
+    
+                </ul></div>
+            
         </section>
 
     </main>
