--- a/portfolio.html
+++ b/portfolio.html
@@ -12,26 +12,26 @@
     <link rel="stylesheet" href="./css/styles.css"</head>
 
 <body class="body">
-   <header >
-        <div class="container main">
-            <nav class="nav">
-                <a href="" class="nav-logo"> <span class=nav-logo-begin>Web</span> <span class=nav-logo-end>Studio</span></a>
+   <header class="header">
+    <div class="container container-header">
+        <nav class="nav">
+            <a href="" class="nav-logo"> <span class=nav-logo-begin>Web</span> <span
+                class=nav-logo-end>Studio</span></a>
 
-                <ul class="nav-list">
-                    <li class="item"><a href="./index.html"class="nav-list-link">Студия</a></li>
-                    <li class="item"><a class="nav-list-link current" href="./portfolio.html">Портфолио</a></li>
-                    <li class="item"><a class="nav-list-link" href="">Контакты</a></li>
+            <ul class="nav-list">
+                <li class="item"><a href="./index.html" class="nav-list-link current">Студия</a></li>
+                <li class="item"><a class="nav-list-link" href="./portfolio.html">Портфолио</a></li>
+                <li class="item"><a class="nav-list-link" href="">Контакты</a></li>
 
-                </ul>
-            </nav>
-        
-            <ul class="contacts">
-                <li><a class="contacts-mail" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a class="contacts-phone" href="tel:+380961111111">+38 096 111 11 11</a>
-                </li>
             </ul>
-        </div>
-       
+        </nav>
+
+        <ul class="contacts">
+            <li class="contacts-item"><a class="contacts-mail" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li class="contacts-item"><a class="contacts-phone" href="tel:+380961111111">+38 096 111 11 11</a>
+            </li>
+        </ul>
+    </div>
     </header>
         <main>
             <div class="container"><h1 hidden>Наши проекты</h1>
