--- a/index.html
+++ b/index.html
@@ -43,11 +43,12 @@
         <section class="hero">
             <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
             <button class="hero-button" type="button">Заказать услугу</button>
+            
         </section>
        
         <!-- СЕКЦИЯ Особенности -->
         <section class="section">
-            <div class="features-section">
+            <div class="container features-section">
                 <h2  hidden
                 class="section-title">Особенности</h2>
                     <ul сlass="features">
