--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         </section>
 
     </main>
-    <footer class="container footer">
+    <footer class="footer">
             <div class="logo"><a class="footer-logo" href=""><span class=footer-logo-begin>Web</span> <span class=footer-logo-end>Studio</span></a>
             </div>
                 <address class="add">
