--- a/index.html
+++ b/index.html
@@ -95,23 +95,26 @@
                 <ul class="team">
                     <li>
                         <img src="./Images/photo1.jpg" alt="Игорь Демьяненко" width="270">
-                        <h3 class="name">Игорь Демьяненко</h3>
+                       <div class="team-member"> <h3 class="name">Игорь Демьяненко</h3>
                         <p class="job">Product Designer</p>
+                        </div>
                     </li>
                     <li>
                         <img src="./Images/photo2.jpg" alt="Ольга Репина" width="270">
-                        <h3 class="name">Ольга Репина</h3>
+                        <div class="team-member"><h3 class="name">Ольга Репина</h3>
                         <p class="job">Frontend Developer</p>
+                        </div>
                     </li>
                     <li>
                         <img src="./Images/photo3.jpg" alt="Николай Тарасов" width="270">
-                        <h3 class="name">Николай Тарасов</h3>
-                        <p class="job">Marketing</p>
+                        <div class="team-member"><h3 class="name">Николай Тарасов</h3>
+                            <p class="job">Marketing</p>
+                            </div>
                     </li>
                     <li>
                         <img src="./Images/photo4.jpg" alt="Михаил Ермаков" width="270">
-                        <h3 class="name">Михаил Ермаков</h3>
-                        <p class="job">UI Designer</p>
+                        <div class="team-member"><h3 class="name">Михаил Ермаков</h3>
+                            <p class="job">UI Designer</p></div>
                     </li>
     
                 </ul></div>
