--- a/portfolio.html
+++ b/portfolio.html
@@ -19,8 +19,8 @@
                 class=nav-logo-end>Studio</span></a>
 
             <ul class="nav-list">
-                <li class="item"><a href="./index.html" class="nav-list-link current">Студия</a></li>
-                <li class="item"><a class="nav-list-link" href="./portfolio.html">Портфолио</a></li>
+                <li class="item"><a href="./index.html" class="nav-list-link ">Студия</a></li>
+                <li class="item"><a class="nav-list-link current" href="./portfolio.html">Портфолио</a></li>
                 <li class="item"><a class="nav-list-link" href="">Контакты</a></li>
 
             </ul>
@@ -129,7 +129,7 @@
             
 
         </main>
-        <footer class="container footer">
+        <footer class="footer">
             <div class="logo"><a class="footer-logo" href=""><span class=footer-logo-begin>Web</span> <span class=footer-logo-end>Studio</span></a>
             </div>
                 <address class="add">
