--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
         </section>
        
         <!-- СЕКЦИЯ Особенности -->
-        <section class="section">
-            <div class="container features-section">
+        <section class="features-section">
+            <div class="container">
                 <h2  hidden
                 class="section-title">Особенности</h2>
-                    <ul сlass="features">
+                    <ul сlass="features-list">
                         <li class="features-item">
                         <h3 class="features-title">Внимание к деталям</h3>
                         <p class="features-desс">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
@@ -74,7 +74,7 @@
         </section>   
                 
         <!-- Секция Чем мы занимаемся -->
-        <section class="section">
+        <section class="activities-section">
             <div class="container">
             <h2 class="section-title">Чем мы занимаемся</h2>
                 <ul class="activities">
