--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <div class="container">
                 <h2  hidden
                 class="section-title">Особенности</h2>
-                    <ul сlass="features-list">
+                    <ul class="features-list">
                         <li class="features-item">
                         <h3 class="features-title">Внимание к деталям</h3>
                         <p class="features-desс">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
