--- a/portfolio.html
+++ b/portfolio.html
@@ -61,7 +61,7 @@
                 <ul class="examples">
                     <li class="examples-item">
                         <img src="./Images/img1.jpg" alt="Окно браузера" width="370">
-                         <div ><h2 class="project-name">Технокряк</h2>
+                         <div class="project-content"><h2 class="project-name">Технокряк</h2>
                             <p class="project-type">Веб-сайт</p>
                         </div>
                        
